# auto-action

./: Cargo.toml  README.md  auto-click.js  main_zf.js
src/: main.rs
