[package]
name = "action"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
cocoa = "0.26.0"
core-foundation = "0.10.0"
core-graphics = "0.24.0"
enigo = "0.3.0"
foreign-types = "0.5.0"
image = "0.25.5"
image-webp = "0.2.0"
imageproc = "0.25.0"
objc = "0.2.7"
repng = "0.2.2"
scap = "0.0.8"
scrap = "0.5.0"
winit = "0.30.8"
xcap = "0.2.0"
template-matching = { version = "0.2.0", features = ["image"] }
rayon = "1.10.0"
Boa = "0.13.1"
log = "0.4.22"
env_logger = "0.11.6"
lazy_static = "1.5.0"
once_cell = "1.20.2"
device_query = "3.0.1"
